-新增 轉蛋機率表

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -50,6 +50,12 @@
 
 <!-- Start 遊戲畫面 -->
 <div class="canvas-container" @*style="display:none;"*@>
+    <div id="Probability" style="display:none">
+        <h2 style="text-align:center;">轉蛋機率表</h2>
+        <div id="ItemsProbability" >
+        </div>
+
+    </div>
     <div class="gamelayer">
         <canvas id="Canvaslobby"></canvas>
         <!-- Start j轉蛋 -->
