--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
@@ -18,10 +18,23 @@
         z-index:99;
     }
 
-        .result-container > div:nth-child(1) {
-            grid-row: 2;
-            grid-column: 3;
-        }
+    #Probability {
+    border: 4px solid black;
+    position: absolute;
+    margin-left: 850px;
+    height: 600px;
+    width: 406px;
+}
+#ItemsProbability {
+    max-height: 555px;
+    overflow-x: auto;
+    min-width: 400px;
+    overflow-y: auto;
+}
+    .result-container > div:nth-child(1) {
+    grid-row: 2;
+    grid-column: 3;
+    }
 
         .result-container > div:nth-child(8) {
             grid-row: 1;
