-新增 開關轉蛋機率表圖示及開關功能

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -73,6 +73,7 @@
             </div>
            
             <div id="summon-buttons">
+                <button id="btnProBability"></button>
                 @*返回大廳按鈕*@
                 <button id="commonbackBTN"></button>
                 @*轉蛋按鈕*@
