--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -51,7 +51,7 @@
 <!-- Start 遊戲畫面 -->
 <div class="canvas-container" @*style="display:none;"*@>
     <div id="Probability" style="display:none">
-        <h2 style="text-align:center;">轉蛋機率表</h2>
+        <h2 style="text-align:center;">轉蛋機率表(經機率縮放後)</h2>
         <div id="ItemsProbability" >
         </div>
 
