--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
@@ -130,16 +130,17 @@
         display: none;
     }
 
-    #CanvasRank {
-        padding-top: 76px;
-        position: absolute;
-        text-align: center;
-        justify-content: center;
-        width: 406px; /* 維持canvas的寬度為406px */
-        height: 600px; /* 維持canvas的高度為600px */
-        background-color: rgba(0, 0, 0, 0.5);
-        display: none;
-    }
+#CanvasRank {
+    padding-top: 76px;
+    position: absolute;
+    right: 430px; /*0902追加*/
+    text-align: center;
+    justify-content: center;
+    width: 406px; /* 維持canvas的寬度為406px */
+    height: 600px; /* 維持canvas的高度為600px */
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+}
 
 
     #rank-container {
